--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@wdio/local-runner": "^6.4.0",
     "@wdio/selenium-standalone-service": "^6.4.0",
     "@wdio/spec-reporter": "^6.4.0",
+    "node-fetch": "^2.6.1",
+    "rimraf": "^3.0.2",
     "selenium-standalone": "^6.18.0",
     "wdio-iedriver-service": "^0.1.0"
   },
@@ -32,6 +34,6 @@
     "@wdio/sync": "^6.4.0",
     "expect": "^26.4.1",
     "expect-webdriverio": "^1.2.0",
-    "moment": "^2.27.0"
+    "moment": "^2.29.1"
   }
 }
